Completed most popular and profitable items analysis

--- a/Microtransaction_Analysis.ipynb
+++ b/Microtransaction_Analysis.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -489,8 +489,8 @@
        "      <th></th>\n",
        "      <th>Purchase Count</th>\n",
        "      <th>Avg. Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg. Purchase Total Per Person</th>\n",
+       "      <th>Total Purchase Price</th>\n",
+       "      <th>Avg Pur. Total Per Person</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gender</th>\n",
@@ -506,21 +506,21 @@
        "      <td>652</td>\n",
        "      <td>3.02</td>\n",
        "      <td>1967.64</td>\n",
-       "      <td>4.07</td>\n",
+       "      <td>3.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>113</td>\n",
        "      <td>3.20</td>\n",
        "      <td>361.94</td>\n",
-       "      <td>4.47</td>\n",
+       "      <td>0.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
        "      <td>3.35</td>\n",
        "      <td>50.19</td>\n",
-       "      <td>4.56</td>\n",
+       "      <td>0.09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -533,30 +533,32 @@
        "Female                            113                 3.20   \n",
        "Other / Non-Disclosed              15                 3.35   \n",
        "\n",
-       "                       Total Purchase Value  Avg. Purchase Total Per Person  \n",
-       "Gender                                                                       \n",
-       "Male                                1967.64                            4.07  \n",
-       "Female                               361.94                            4.47  \n",
-       "Other / Non-Disclosed                 50.19                            4.56  "
+       "                       Total Purchase Price  Avg Pur. Total Per Person  \n",
+       "Gender                                                                  \n",
+       "Male                                1967.64                       3.42  \n",
+       "Female                               361.94                       0.63  \n",
+       "Other / Non-Disclosed                 50.19                       0.09  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "purchase_set = purchase_data[['Gender','SN','Purchase ID','Price']]\n",
-    "\n",
-    "gender_group = purchase_set.groupby(['Gender'])\n",
-    "gender_sales = gender_group['Purchase ID'].nunique()\n",
-    "gender_sales = pd.DataFrame(gender_sales)\n",
-    "gender_sales.columns = ['Purchase Count']\n",
-    "gender_sales['Avg. Purchase Price'] = round(gender_group['Price'].mean(), 2)\n",
-    "gender_sales['Total Purchase Value'] = gender_group['Price'].sum()\n",
-    "gender_sales['Avg. Purchase Total Per Person'] = round(gender_group['Price'].sum()/gender_group['SN'].nunique(),2)\n",
-    "gender_sales = gender_sales.sort_values('Purchase Count', ascending=False)\n",
-    "gender_sales"
+    "gender_data = purchase_data[['Gender','SN','Purchase ID','Price']].copy()\n",
+    "gender_group = gender_data.groupby(['Gender'])\n",
+    "gender_npurch = gender_group['Purchase ID'].nunique()\n",
+    "gender_avgprice = round(gender_group['Price'].mean(), 2)\n",
+    "gender_totalprice = round(gender_group['Price'].sum(), 2)\n",
+    "gender_avgtotalperperson = round(gender_group['Price'].sum()/TotalPlayers, 2)\n",
+    "gender_merge = {'Purchase Count': gender_npurch,\n",
+    "            'Avg. Purchase Price': gender_avgprice,\n",
+    "            'Total Purchase Price': gender_totalprice,\n",
+    "            'Avg Pur. Total Per Person': gender_avgtotalperperson}\n",
+    "gender_merge = pd.DataFrame(gender_merge)\n",
+    "gender_merge = gender_merge.sort_values('Purchase Count', ascending=False)\n",
+    "gender_merge"
    ]
   },
   {
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +689,7 @@
        "45-49                 1                       0.2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -993,13 +995,13 @@
        "Iskadarya95               3                 4.37                 13.10"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "topspend_data = purchase_data[['SN','Purchase ID','Price']]\n",
+    "topspend_data = purchase_data[['SN','Purchase ID','Price']].copy()\n",
     "topspend_group = topspend_data.groupby(['SN'])\n",
     "topspend_npurch = topspend_group['Purchase ID'].count()\n",
     "topspend_avgprice = round(topspend_group['Price'].mean(), 2)\n",
@@ -1044,10 +1046,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Avg. Item Price</th>\n",
+       "      <th>Total Purchase Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>Oathbreaker, Last Hope of the Breaking Storm</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>Fiery Glass Crusader</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.58</td>\n",
+       "      <td>41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>Persuasion</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>28.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.53</td>\n",
+       "      <td>31.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Item Name  Purchase Count  \\\n",
+       "Item ID                                                                 \n",
+       "92                                       Final Critic              13   \n",
+       "178      Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "145                              Fiery Glass Crusader               9   \n",
+       "132                                        Persuasion               9   \n",
+       "108         Extraction, Quickblade Of Trembling Hands               9   \n",
+       "\n",
+       "         Avg. Item Price  Total Purchase Price  \n",
+       "Item ID                                         \n",
+       "92                  4.61                 59.99  \n",
+       "178                 4.23                 50.76  \n",
+       "145                 4.58                 41.22  \n",
+       "132                 3.22                 28.99  \n",
+       "108                 3.53                 31.77  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_data = purchase_data[['Item ID','Item Name','Price', 'Purchase ID']].copy()\n",
+    "item_group = item_data.groupby(['Item ID'])\n",
+    "item_name = item_group['Item Name'].first()\n",
+    "item_npurch = item_group['Purchase ID'].count()\n",
+    "item_avgprice = round(item_group['Price'].mean(), 2)\n",
+    "item_totalprice = round(item_group['Price'].sum(), 2)\n",
+    "item_merge = {'Item Name': item_name,\n",
+    "                'Purchase Count':item_npurch,\n",
+    "                'Avg. Item Price': item_avgprice,\n",
+    "                'Total Purchase Price': item_totalprice}\n",
+    "item_merge = pd.DataFrame(item_merge)\n",
+    "item_merge = item_merge.sort_values('Purchase Count', ascending=False)\n",
+    "item_merge.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1072,10 +1185,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Avg. Item Price</th>\n",
+       "      <th>Total Purchase Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>Oathbreaker, Last Hope of the Breaking Storm</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>Nirvana</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.90</td>\n",
+       "      <td>44.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>Fiery Glass Crusader</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.58</td>\n",
+       "      <td>41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>Singed Scalpel</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>34.80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Item Name  Purchase Count  \\\n",
+       "Item ID                                                                 \n",
+       "92                                       Final Critic              13   \n",
+       "178      Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82                                            Nirvana               9   \n",
+       "145                              Fiery Glass Crusader               9   \n",
+       "103                                    Singed Scalpel               8   \n",
+       "\n",
+       "         Avg. Item Price  Total Purchase Price  \n",
+       "Item ID                                         \n",
+       "92                  4.61                 59.99  \n",
+       "178                 4.23                 50.76  \n",
+       "82                  4.90                 44.10  \n",
+       "145                 4.58                 41.22  \n",
+       "103                 4.35                 34.80  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item_merge = item_merge.sort_values('Total Purchase Price', ascending=False)\n",
+    "item_merge.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
