Streamlined gender demographics and added comments

--- a/Microtransaction_Analysis.ipynb
+++ b/Microtransaction_Analysis.ipynb
@@ -1,13 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -91,102 +86,27 @@
        "      <td>Fury</td>\n",
        "      <td>1.44</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>775</th>\n",
-       "      <td>775</td>\n",
-       "      <td>Aethedru70</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>60</td>\n",
-       "      <td>Wolf</td>\n",
-       "      <td>3.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>776</th>\n",
-       "      <td>776</td>\n",
-       "      <td>Iral74</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>164</td>\n",
-       "      <td>Exiled Doomblade</td>\n",
-       "      <td>1.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>777</th>\n",
-       "      <td>777</td>\n",
-       "      <td>Yathecal72</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>67</td>\n",
-       "      <td>Celeste, Incarnation of the Corrupted</td>\n",
-       "      <td>3.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>778</th>\n",
-       "      <td>778</td>\n",
-       "      <td>Sisur91</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>4.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>779</th>\n",
-       "      <td>779</td>\n",
-       "      <td>Ennrian78</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>50</td>\n",
-       "      <td>Dawn</td>\n",
-       "      <td>4.60</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>780 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Purchase ID             SN  Age  Gender  Item ID  \\\n",
-       "0              0        Lisim78   20    Male      108   \n",
-       "1              1    Lisovynya38   40    Male      143   \n",
-       "2              2     Ithergue48   24    Male       92   \n",
-       "3              3  Chamassasya86   24    Male      100   \n",
-       "4              4      Iskosia90   23    Male      131   \n",
-       "..           ...            ...  ...     ...      ...   \n",
-       "775          775     Aethedru70   21  Female       60   \n",
-       "776          776         Iral74   21    Male      164   \n",
-       "777          777     Yathecal72   20    Male       67   \n",
-       "778          778        Sisur91    7    Male       92   \n",
-       "779          779      Ennrian78   24    Male       50   \n",
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
        "\n",
-       "                                     Item Name  Price  \n",
-       "0    Extraction, Quickblade Of Trembling Hands   3.53  \n",
-       "1                            Frenzied Scimitar   1.56  \n",
-       "2                                 Final Critic   4.88  \n",
-       "3                                  Blindscythe   3.27  \n",
-       "4                                         Fury   1.44  \n",
-       "..                                         ...    ...  \n",
-       "775                                       Wolf   3.54  \n",
-       "776                           Exiled Doomblade   1.63  \n",
-       "777      Celeste, Incarnation of the Corrupted   3.46  \n",
-       "778                               Final Critic   4.19  \n",
-       "779                                       Dawn   4.60  \n",
-       "\n",
-       "[780 rows x 7 columns]"
+       "                                   Item Name  Price  \n",
+       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                          Frenzied Scimitar   1.56  \n",
+       "2                               Final Critic   4.88  \n",
+       "3                                Blindscythe   3.27  \n",
+       "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,14 +115,13 @@
     "# Set up pandas module\n",
     "import pandas as pd\n",
     "\n",
-    "# File to Load (Remember to Change These)\n",
-    "file_to_load = \"Resources/purchase_data.csv\"\n",
+    "# load data file\n",
+    "file = \"Resources/purchase_data.csv\"\n",
     "\n",
-    "# Read Purchasing File and store into Pandas data frame\n",
-    "purchase_data = pd.read_csv(file_to_load)\n",
-    "\n",
+    "# Read microtransaction csv and display as dataframe\n",
+    "purchase_data = pd.read_csv(file)\n",
     "purchase_data = pd.DataFrame(purchase_data)\n",
-    "purchase_data"
+    "purchase_data.head()"
    ]
   },
   {
@@ -210,13 +129,6 @@
    "metadata": {},
    "source": [
     "## Player Count"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Display the total number of players\n"
    ]
   },
   {
@@ -233,6 +145,7 @@
     }
    ],
    "source": [
+    "# calculate the total number of unique players\n",
     "TotalPlayers = purchase_data['SN'].nunique()\n",
     "\n",
     "print(f'Total Players: {TotalPlayers}')"
@@ -246,24 +159,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Run basic calculations to obtain number of unique items, average price, etc.\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 103,
    "metadata": {
     "scrolled": true
    },
@@ -299,33 +196,39 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>179</td>\n",
-       "      <td>3.05</td>\n",
+       "      <td>$3.05</td>\n",
        "      <td>780</td>\n",
-       "      <td>2379.77</td>\n",
+       "      <td>$2379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Number of Unique Items  Average Price  Number of Purchases  Total Revenue\n",
-       "0                     179           3.05                  780        2379.77"
+       "   Number of Unique Items Average Price  Number of Purchases Total Revenue\n",
+       "0                     179         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# calculate the total number of unique items, average item price, total purchaes, and total revenue\n",
     "totaluniqueitems = purchase_data['Item Name'].nunique()\n",
     "avgprice = round(purchase_data['Price'].mean(), 2)\n",
     "numpurchases = purchase_data['Purchase ID'].count()\n",
     "totalrevenue = purchase_data['Price'].sum()\n",
     "\n",
+    "# create a list of values and headers. Create a dataframe\n",
     "values = [[totaluniqueitems,avgprice,numpurchases,totalrevenue]]\n",
     "headers = ['Number of Unique Items','Average Price','Number of Purchases','Total Revenue']\n",
     "table = pd.DataFrame(values, columns = headers)\n",
+    "\n",
+    "#format table with proper units and display\n",
+    "table['Average Price'] = table['Average Price'].map(\"${}\".format)\n",
+    "table['Total Revenue'] = table['Total Revenue'].map(\"${}\".format)\n",
     "table"
    ]
   },
@@ -337,23 +240,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Percentage and Count of Male Players\n",
-    "\n",
-    "\n",
-    "* Percentage and Count of Female Players\n",
-    "\n",
-    "\n",
-    "* Percentage and Count of Other / Non-Disclosed\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -395,12 +283,12 @@
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>81</td>\n",
-       "      <td>14.0%</td>\n",
+       "      <td>14.1%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>11</td>\n",
-       "      <td>2.0%</td>\n",
+       "      <td>1.9%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -410,27 +298,35 @@
        "                       Player Count Percent of Total Players\n",
        "Gender                                                      \n",
        "Male                            484                    84.0%\n",
-       "Female                           81                    14.0%\n",
-       "Other / Non-Disclosed            11                     2.0%"
+       "Female                           81                    14.1%\n",
+       "Other / Non-Disclosed            11                     1.9%"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gender_data = purchase_data[['Gender','SN']]\n",
+    "# create a subset of the microtransaction data\n",
+    "gender_data1 = purchase_data[['Gender','SN']].copy()\n",
     "\n",
-    "gender_group = gender_data.groupby(['Gender'])\n",
+    "# group data by gender\n",
+    "gender_group = gender_data1.groupby(['Gender'])\n",
+    "\n",
+    "# calculate player count by gender, create a dataframe, and rename first column\n",
     "gender_count = gender_group['SN'].nunique()\n",
-    "gender_count = pd.DataFrame(gender_count)\n",
-    "gender_count.columns = ['Player Count']\n",
-    "gender_percent = round(gender_count['Player Count']/TotalPlayers*100)\n",
-    "gender_count['Percent of Total Players'] = gender_percent\n",
-    "gender_count = gender_count.sort_values('Player Count', ascending=False)\n",
-    "gender_count['Percent of Total Players'] = gender_count['Percent of Total Players'].map(\"{}%\".format)\n",
-    "gender_count"
+    "gender_percent = round(gender_group['SN'].nunique()/TotalPlayers * 100, 1)\n",
+    "\n",
+    "# calculate the percentage of total players by gender. Create a Percent column within the previous dataframe\n",
+    "gender_merge = {'Player Count': gender_count,\n",
+    "            'Percent of Total Players': gender_percent}\n",
+    "gender_merge = pd.DataFrame(gender_merge)\n",
+    "\n",
+    "# sort values based on descending player counts, reformat percentages, and display\n",
+    "gender_merge = gender_merge.sort_values('Player Count', ascending=False)\n",
+    "gender_merge['Percent of Total Players'] = gender_merge['Percent of Total Players'].map(\"{}%\".format)\n",
+    "gender_merge"
    ]
   },
   {
@@ -442,26 +338,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. by gender\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -538,23 +416,30 @@
        "Other / Non-Disclosed               $50.19                     $0.09  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gender_data = purchase_data[['Gender','SN','Purchase ID','Price']].copy()\n",
-    "gender_group = gender_data.groupby(['Gender'])\n",
+    "# create a subset of the microtransaction data and group by gender\n",
+    "gender_data2 = purchase_data[['Gender','SN','Purchase ID','Price']].copy()\n",
+    "gender_group = gender_data2.groupby(['Gender'])\n",
+    "\n",
+    "# calculate number of purchases, avg purchase ammount, total purchase amount, and average purchase per person by gender group\n",
     "gender_npurch = gender_group['Purchase ID'].nunique()\n",
     "gender_avgprice = round(gender_group['Price'].mean(), 2)\n",
     "gender_totalprice = round(gender_group['Price'].sum(), 2)\n",
     "gender_avgtotalperperson = round(gender_group['Price'].sum()/TotalPlayers, 2)\n",
+    "\n",
+    "# create a dictionary and dataframe of the values\n",
     "gender_merge = {'Purchase Count': gender_npurch,\n",
     "            'Avg. Purchase Price': gender_avgprice,\n",
     "            'Total Purchase Price': gender_totalprice,\n",
     "            'Avg Pur. Total Per Person': gender_avgtotalperperson}\n",
     "gender_merge = pd.DataFrame(gender_merge)\n",
+    "\n",
+    "# sort values based on number of purchases, format the table, and display\n",
     "gender_merge = gender_merge.sort_values('Purchase Count', ascending=False)\n",
     "gender_merge['Avg. Purchase Price'] = gender_merge['Avg. Purchase Price'].map(\"${}\".format)\n",
     "gender_merge['Total Purchase Price'] = gender_merge['Total Purchase Price'].map(\"${}\".format)\n",
