--- a/Microtransaction_Analysis.ipynb
+++ b/Microtransaction_Analysis.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -382,21 +382,21 @@
        "      <td>652</td>\n",
        "      <td>$3.02</td>\n",
        "      <td>$1967.64</td>\n",
-       "      <td>$3.42</td>\n",
+       "      <td>$4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>113</td>\n",
        "      <td>$3.2</td>\n",
        "      <td>$361.94</td>\n",
-       "      <td>$0.63</td>\n",
+       "      <td>$4.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
        "      <td>$3.35</td>\n",
        "      <td>$50.19</td>\n",
-       "      <td>$0.09</td>\n",
+       "      <td>$4.56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -411,12 +411,12 @@
        "\n",
        "                      Total Purchase Price Avg Pur. Total Per Person  \n",
        "Gender                                                                \n",
-       "Male                              $1967.64                     $3.42  \n",
-       "Female                             $361.94                     $0.63  \n",
-       "Other / Non-Disclosed               $50.19                     $0.09  "
+       "Male                              $1967.64                     $4.07  \n",
+       "Female                             $361.94                     $4.47  \n",
+       "Other / Non-Disclosed               $50.19                     $4.56  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
     "gender_npurch = gender_group['Purchase ID'].nunique()\n",
     "gender_avgprice = round(gender_group['Price'].mean(), 2)\n",
     "gender_totalprice = round(gender_group['Price'].sum(), 2)\n",
-    "gender_avgtotalperperson = round(gender_group['Price'].sum()/TotalPlayers, 2)\n",
+    "gender_avgtotalperperson = round(gender_group['Price'].sum()/gender_count, 2)\n",
     "\n",
     "# create a dictionary and dataframe of the values\n",
     "gender_merge = {'Purchase Count': gender_npurch,\n",
@@ -452,28 +452,6 @@
    "metadata": {},
    "source": [
     "## Age Demographics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Establish bins for ages\n",
-    "\n",
-    "\n",
-    "* Categorize the existing players using the age bins. Hint: use pd.cut()\n",
-    "\n",
-    "\n",
-    "* Calculate the numbers and percentages by age group\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: round the percentage column to two decimal points\n",
-    "\n",
-    "\n",
-    "* Display Age Demographics Table\n"
    ]
   },
   {
@@ -581,15 +559,21 @@
     }
    ],
    "source": [
+    "# create bins and bin labels for age groups\n",
     "bins = [0, 9, 14, 19, 24, 29, 34, 39, 44, 49]\n",
     "group_names = ['<10', '10-14', '15-19', '20-24','25-29', '30-34', '35-39','40-44','45-49']\n",
     "\n",
+    "# create a subset of microtransaction data, create age groups, and group by age group\n",
     "age_data = purchase_data[['Age','Purchase ID','SN','Price']].copy()\n",
     "age_data['Age Group'] = pd.cut(age_data['Age'], bins, labels = group_names, include_lowest=True)\n",
     "age_group = age_data.groupby(['Age Group'])\n",
+    "\n",
+    "# calculate the player count and percent of total players by age group. Create dataframe\n",
     "age_count = age_group['SN'].nunique()\n",
     "age_count_df = {'Player Count':age_count}\n",
     "age_count_df = pd.DataFrame(age_count_df)\n",
+    "\n",
+    "# format table properly and display\n",
     "age_count_df['Percent of Total Players'] = round(age_count_df['Player Count']/TotalPlayers * 100, 1)\n",
     "age_count_df['Percent of Total Players'] = age_count_df['Percent of Total Players'].map(\"{}%\".format)\n",
     "age_count_df"
@@ -600,25 +584,6 @@
    "metadata": {},
    "source": [
     "## Purchasing Analysis (Age)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Bin the purchase_data data frame by age\n",
-    "\n",
-    "\n",
-    "* Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. in the table below\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame"
    ]
   },
   {
@@ -760,15 +725,20 @@
     }
    ],
    "source": [
+    "# calculate the number of purchases, avg purchase, total purchase price, and avg purchase per person by age group.\n",
     "age_npurch = age_group['Purchase ID'].count()\n",
     "age_avgprice = round(age_group['Price'].mean(), 2)\n",
     "age_totalprice = round(age_group['Price'].sum(), 2)\n",
     "age_avgperperson = round(age_totalprice/age_count, 2)\n",
+    "\n",
+    "# create age dictionary and dataframe\n",
     "age_merge = {'Purchase Count':age_npurch,\n",
     "            'Avg. Purchase Price': age_avgprice,\n",
     "            'Total Purchase Price': age_totalprice,\n",
     "            'Avg Pur. Total Per Person': age_avgperperson}\n",
     "age_merge = pd.DataFrame(age_merge)\n",
+    "\n",
+    "# format age demographics table properly and display\n",
     "age_merge['Avg. Purchase Price'] = age_merge['Avg. Purchase Price'].map(\"${}\".format)\n",
     "age_merge['Total Purchase Price'] = age_merge['Total Purchase Price'].map(\"${}\".format)\n",
     "age_merge['Avg Pur. Total Per Person'] = age_merge['Avg Pur. Total Per Person'].map(\"${}\".format)\n",
@@ -780,26 +750,6 @@
    "metadata": {},
    "source": [
     "## Top Spenders"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Run basic calculations to obtain the results in the table below\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Sort the total purchase value column in descending order\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display a preview of the summary data frame\n",
-    "\n"
    ]
   },
   {
@@ -890,15 +840,22 @@
     }
    ],
    "source": [
+    "# create a subset of the microtransaction data and group by spenders\n",
     "topspend_data = purchase_data[['SN','Purchase ID','Price']].copy()\n",
     "topspend_group = topspend_data.groupby(['SN'])\n",
+    "\n",
+    "# calculate number of purchases, avg purchase amount, total purchase amount by spender \n",
     "topspend_npurch = topspend_group['Purchase ID'].count()\n",
     "topspend_avgprice = round(topspend_group['Price'].mean(), 2)\n",
     "topspend_totalprice = round(topspend_group['Price'].sum(), 2)\n",
+    "\n",
+    "# create a dictionary and dataframe of the values\n",
     "topspend_merge = {'Purchase Count':topspend_npurch,\n",
     "                'Avg. Purchase Price': topspend_avgprice,\n",
     "                'Total Purchase Price': topspend_totalprice}\n",
     "topspend_merge = pd.DataFrame(topspend_merge)\n",
+    "\n",
+    "# sort values based on total spending, format the table, and display\n",
     "topspend_merge = topspend_merge.sort_values('Total Purchase Price', ascending=False)\n",
     "topspend_merge['Avg. Purchase Price'] = topspend_merge['Avg. Purchase Price'].map(\"${}\".format)\n",
     "topspend_merge['Total Purchase Price'] = topspend_merge['Total Purchase Price'].map(\"${}\".format)\n",
@@ -910,29 +867,6 @@
    "metadata": {},
    "source": [
     "## Most Popular Items"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Retrieve the Item ID, Item Name, and Item Price columns\n",
-    "\n",
-    "\n",
-    "* Group by Item ID and Item Name. Perform calculations to obtain purchase count, average item price, and total purchase value\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Sort the purchase count column in descending order\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display a preview of the summary data frame\n",
-    "\n"
    ]
   },
   {
@@ -1038,20 +972,27 @@
     }
    ],
    "source": [
+    "# create a subset of the microtransaction data and group by item\n",
     "item_data = purchase_data[['Item ID','Item Name','Price', 'Purchase ID']].copy()\n",
     "item_group = item_data.groupby(['Item ID'])\n",
+    "\n",
+    "# calculate item names, number purchased, avg price, and total price by item \n",
     "item_name = item_group['Item Name'].first()\n",
     "item_npurch = item_group['Purchase ID'].count()\n",
     "item_avgprice = round(item_group['Price'].mean(), 2)\n",
     "item_totalprice = round(item_group['Price'].sum(), 2)\n",
+    "\n",
+    "# create a dictionary and dataframe of the values\n",
     "item_merge = {'Item Name': item_name,\n",
     "                'Purchase Count':item_npurch,\n",
     "                'Avg. Item Price': item_avgprice,\n",
     "                'Total Purchase Price': item_totalprice}\n",
     "item_merge = pd.DataFrame(item_merge)\n",
+    "\n",
+    "# sort values based on number of purchases, format the table, and display\n",
     "item_merge = item_merge.sort_values('Purchase Count', ascending=False)\n",
     "item_merge['Avg. Item Price'] = item_merge['Avg. Item Price'].map(\"${}\".format)\n",
-    "item_merge.head()\n"
+    "item_merge.head()"
    ]
   },
   {
@@ -1059,20 +1000,6 @@
    "metadata": {},
    "source": [
     "## Most Profitable Items"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Sort the above table by total purchase value in descending order\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display a preview of the data frame\n",
-    "\n"
    ]
   },
   {
@@ -1237,6 +1164,7 @@
     }
    ],
    "source": [
+    "# sort values based on total purchase price, format the table, and display\n",
     "item_merge = item_merge.sort_values('Total Purchase Price', ascending=False)\n",
     "item_merge['Total Purchase Price'] = item_merge['Total Purchase Price'].map(\"${}\".format)\n",
     "item_merge"
