Report written within code

--- a/Microtransaction_Analysis.ipynb
+++ b/Microtransaction_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 118,
    "metadata": {
     "scrolled": true
    },
@@ -209,7 +209,7 @@
        "0                     179         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "Other / Non-Disclosed            11                     1.9%"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "Other / Non-Disclosed               $50.19                     $4.56  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "45-49                 1                     0.2%"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
        "45-49                          $1.7  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "Iskadarya95               3               $4.37                $13.1"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
        "108               $3.53                 31.77  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 127,
    "metadata": {
     "scrolled": true
    },
@@ -1079,51 +1079,8 @@
        "      <td>$4.35</td>\n",
        "      <td>$34.8</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Flux, Destroyer of Due Diligence</td>\n",
-       "      <td>2</td>\n",
-       "      <td>$1.06</td>\n",
-       "      <td>$2.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>Exiled Mithril Longsword</td>\n",
-       "      <td>1</td>\n",
-       "      <td>$2.0</td>\n",
-       "      <td>$2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>Whistling Mithril Warblade</td>\n",
-       "      <td>2</td>\n",
-       "      <td>$1.0</td>\n",
-       "      <td>$2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>Gladiator's Glaive</td>\n",
-       "      <td>1</td>\n",
-       "      <td>$1.93</td>\n",
-       "      <td>$1.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>The Decapitator</td>\n",
-       "      <td>1</td>\n",
-       "      <td>$1.75</td>\n",
-       "      <td>$1.75</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>179 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1134,12 +1091,6 @@
        "82                                            Nirvana               9   \n",
        "145                              Fiery Glass Crusader               9   \n",
        "103                                    Singed Scalpel               8   \n",
-       "...                                               ...             ...   \n",
-       "28                   Flux, Destroyer of Due Diligence               2   \n",
-       "126                          Exiled Mithril Longsword               1   \n",
-       "125                        Whistling Mithril Warblade               2   \n",
-       "104                                Gladiator's Glaive               1   \n",
-       "42                                    The Decapitator               1   \n",
        "\n",
        "        Avg. Item Price Total Purchase Price  \n",
        "Item ID                                       \n",
@@ -1147,18 +1098,10 @@
        "178               $4.23               $50.76  \n",
        "82                 $4.9                $44.1  \n",
        "145               $4.58               $41.22  \n",
-       "103               $4.35                $34.8  \n",
-       "...                 ...                  ...  \n",
-       "28                $1.06                $2.12  \n",
-       "126                $2.0                 $2.0  \n",
-       "125                $1.0                 $2.0  \n",
-       "104               $1.93                $1.93  \n",
-       "42                $1.75                $1.75  \n",
-       "\n",
-       "[179 rows x 4 columns]"
+       "103               $4.35                $34.8  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,15 +1110,28 @@
     "# sort values based on total purchase price, format the table, and display\n",
     "item_merge = item_merge.sort_values('Total Purchase Price', ascending=False)\n",
     "item_merge['Total Purchase Price'] = item_merge['Total Purchase Price'].map(\"${}\".format)\n",
-    "item_merge"
+    "item_merge.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Report Summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Male players make up the vast majority of players at 84% of total players\n",
+    "# Male players spend more on microtransaction items.\n",
+    "# Players of 20-24 yrs make up the largest age group and spend the most on items\n",
+    "# Lisosia93 purchased and spent the most money on items but fairly unremarkable relative to other players\n",
+    "# The most popular and profitable item is the Final Critic."
+   ]
   }
  ],
  "metadata": {
